kubernetes/apps/home-system/homepage/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage
spec:
  description: "Network policy for Homepage dashboard"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow ingress from envoy-gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow access to services for widgets (all namespaces)
    - toEntities:
        - cluster
    # Allow kube-apiserver access for Kubernetes widgets
    - toEntities:
        - kube-apiserver
    # Allow external API calls for widgets
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
